# rss-digest

./: .gitignore  LICENSE  README.md  example.md  pyproject.toml
prompts/: README.md  demote-ai-news.txt  gemma-4.txt
src/rss_digest/: digest.py  greader.py
tests/: test_digest.py  test_greader.py
